--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-cabecalho></app-cabecalho>
 <main>
-  <app-criar-pensanmentos></app-criar-pensanmentos>
+  <router-outlet></router-outlet>
 </main>
 <app-rodape></app-rodape>
