--- a/src/app/components/cabecalho/cabecalho.component.css
+++ b/src/app/components/cabecalho/cabecalho.component.css
@@ -1,30 +1,22 @@
 .cabecalho {
-  background: linear-gradient(to right, #8B0000, #800000);
+  height: 100px; /* ou qualquer outro valor que você considere adequado */
+  background: linear-gradient(to bottom, #E2BF81, #F6E1B5);
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 10px solid black;
+  border: 1px solid rgb(44, 5, 5);
 }
 
 .cabecalho .logo {
-  width: 20%;
-  padding: 2rem 3rem;
+  width: 30%;
+  padding: 1rem 2rem;
 }
 
 .cabecalho .logo img {
-  width: 200px;
-  max-width: 400px;
-  margin-bottom: 1rem;
-}
-
-.cabecalho .imagem{
-  width: 20%;
-}
-
-.cabecalho p {
-  font-size: 1.5rem;
-  color: #000000;
+  width: 100%;
+  max-width: 120px;
+  height: auto;
 }
 
 @media (max-width: 576px) {
@@ -32,15 +24,13 @@
     padding: 2rem;
   }
   .cabecalho p {
-    font-size: 1.5rem
+    font-size: 1.5rem;
+    background: #E2BF81;
   }
 }
 
 @media (max-width: 768px) {
   .cabecalho .logo {
-    width: 90%;
-  }
-  .cabecalho .imagem {
-    display: none;
+    width: 60%;
   }
 }
