--- a/src/app/components/cabecalho/cabecalho.component.html
+++ b/src/app/components/cabecalho/cabecalho.component.html
@@ -1,7 +1,5 @@
 <header class="cabecalho ff-inter">
-    <div class="logo">  
-        <img src="../../../assets/imagens/musiclibs.png" alt="logo da aplicação MusicLib">
-        <p>Solte sua voz: compartilhe o trecho da sua música favorita!</p>
+    <div class="logo">
+        <img src="../../../assets/imagens/musiclibs.svg" alt="logo da aplicação MusicLib">
     </div>
-    <img class="imagem" src="../../../assets/imagens/computador-cabecalho.png" alt="imagem">
 </header>
