Requisição HTTP e mais algumas mudanças no design

--- a/src/app/components/pensamentos/criar-pensanmentos/criar-pensanmentos.component.html
+++ b/src/app/components/pensamentos/criar-pensanmentos/criar-pensanmentos.component.html
@@ -113,7 +113,7 @@
     </div>
     <div class="acoes">
       <button (click)="criarPenasmento()" class="botao">Salvar</button>
-      <button routerLink="/listarPensamento" class="botao">Cancelar</button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
   </div>
   </form>
 </section>
