--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 h2 {
-  color: #154580;
+  color: #632a10;
   font-weight: bold;
   font-size: 2rem;
   text-align: center;
@@ -36,20 +36,20 @@ h2 {
 }
 
 .botao {
-  background: #154580;
+  background: #632a10;
   color: #ffffff;
   max-width: 270px;
   width: 250px;
   padding: 1rem;
   margin: 0 auto;
-  border: 2px solid #154580;
+  border: 2px solid #be7857;
   border-radius: 10px;
   transition: 0.5s ease;
 }
 
 .botao:hover {
-  border: 2px solid #84EEC1;
-  color: #84EEC1;
+  border: 2px solid #a84308;
+  color: #eb723a;
 }
 
 @media (min-width: 576px) {
