--- a/src/app/components/pensamentos/pensamento/pensamento.component.css
+++ b/src/app/components/pensamentos/pensamento/pensamento.component.css
@@ -33,15 +33,15 @@
 }
 
 .modelo1 {
-  box-shadow: 8px 8px 0px #154580;
+  box-shadow: 8px 8px 0px #040303;
 }
 
 .modelo2 {
-  box-shadow: 8px 8px 0px #6BD1FF;
+  box-shadow: 8px 8px 0px #461111;
 }
 
 .modelo3 {
-  box-shadow: 8px 8px 0px #84EEC1;
+  box-shadow: 8px 8px 0px #A13333;
 }
 
 .pensamento-g {
