Deixando formulário reativo/Adicionando algumas verificações

--- a/src/app/components/rodape/rodape.component.css
+++ b/src/app/components/rodape/rodape.component.css
@@ -2,7 +2,7 @@ footer {
   background: linear-gradient(to right, #E2BF81, #F6E1B5);
   gap: 0px 0px;
   text-align: center;
-  padding: 1rem 2rem;
+  padding: 0.9rem ;
   border-top: 1px solid black;
 }
 
